--- a/FarmScout/AppShell.xaml
+++ b/FarmScout/AppShell.xaml
@@ -33,5 +33,8 @@
     
     <MenuItem Text="✅ Tasks" 
               Command="{Binding Source={RelativeSource AncestorType={x:Type Shell}}, Path=ViewTasksCommand}"/>
+    
+    <MenuItem Text="📚 Lookup Tables" 
+              Command="{Binding Source={RelativeSource AncestorType={x:Type Shell}}, Path=ViewLookupTablesCommand}"/>
 
 </Shell>
