--- a/FarmScout/Views/LookupItemPage.xaml
+++ b/FarmScout/Views/LookupItemPage.xaml
@@ -32,6 +32,19 @@
                         TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
             </StackLayout>
 
+            <!-- SubGroup Field -->
+            <StackLayout Spacing="8">
+                <Label Text="SubGroup" 
+                       FontAttributes="Bold"
+                       TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+                <Picker Title="Select a subgroup (optional)"
+                        SelectedItem="{Binding SubGroup}"
+                        ItemsSource="{Binding AvailableSubGroups}"
+                        BackgroundColor="{AppThemeBinding Light={StaticResource Gray100}, Dark={StaticResource Gray900}}"
+                        TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                        IsEnabled="{Binding AvailableSubGroups, Converter={StaticResource NotNullConverter}}"/>
+            </StackLayout>
+
             <!-- Description Field -->
             <StackLayout Spacing="8">
                 <Label Text="Description" 
