--- a/FarmScout/Views/ObservationPage.xaml
+++ b/FarmScout/Views/ObservationPage.xaml
@@ -154,6 +154,10 @@
             
             <!-- Disease Information -->
             <controls:DiseaseControl 
+                x:Name="DiseaseControl"
+                DiseaseName="{Binding DiseaseName}"
+                DiseaseType="{Binding DiseaseType}"
+                IsViewMode="{Binding IsViewMode}"
                 IsVisible="{Binding SelectedObservationTypes, Converter={StaticResource StringContainsConverter}, ConverterParameter=Disease}"/>
 
             <!-- Pest Information -->
