--- a/FarmScout/Controls/PestControl.xaml
+++ b/FarmScout/Controls/PestControl.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:FarmScout.ViewModels"
              x:Class="FarmScout.Controls.PestControl">
-    
     <Border BackgroundColor="#F5F5F5" Padding="15">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="10" />
@@ -18,7 +18,7 @@
                    TextColor="Black"
                    BackgroundColor="White"
                    PlaceholderColor="#999"
-                   IsReadOnly="{Binding IsViewMode}"/>
+                   IsReadOnly="{Binding x:DataType=viewmodels:ObservationViewModel, Path=IsViewMode}"/>
             
             <Entry Placeholder="Pest Count" 
                    Text="{Binding PestCount}"
